Splitter grid control. Implement links

--- a/src/Panama.Controls/Themes/Generic.xaml
+++ b/src/Panama.Controls/Themes/Generic.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/PathSelector.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/TagSelectorControl.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/TagSelectorItem.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Panama.Controls;component/Themes/Generic/SplitterGrid.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
