--- a/src/Panama/View/Main/LinkView.xaml
+++ b/src/Panama/View/Main/LinkView.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
     xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
+    xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" 
@@ -12,9 +13,10 @@
     d:DesignWidth="500" d:DesignHeight="300">
 
     <con:SplitterGrid
-        LeftWidth="{Binding Config.LeftColumnLink}"
-        LeftMinWidth="700"
-        RightMinWidth="220">
+        MinDetailWidth="{x:Static core:Config+Grid.MinLinkDetailWidth}"
+        MaxDetailWidth="{x:Static core:Config+Grid.MaxLinkDetailWidth}"
+        IsDetailExpanded="{Binding Config.LinkDetailExpanded}"
+        DetailWidth="{Binding Config.LinkDetailWidth}">
         
         <con:SplitterGrid.HeaderLeft>
             <StatusBar>
