--- a/src/Panama/View/Main/PublisherView.xaml
+++ b/src/Panama/View/Main/PublisherView.xaml
@@ -2,8 +2,9 @@
     x:Class="Restless.Panama.View.PublisherView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:cv="clr-namespace:Restless.Panama.Core"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
+    xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vw="clr-namespace:Restless.Panama.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,129 +12,124 @@
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:PublisherViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="400">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <!-- 
-            MaxWidth binds to a value relative to the width of the grid. 
-            Converter parm is the desired min width of right column
-            -->            
-            <ColumnDefinition
-                Width="{Binding Config.LeftColumnPublisher,Mode=TwoWay}"
-                MaxWidth="{Binding Path=ActualWidth,
-                RelativeSource={RelativeSource AncestorType=Grid},
-                Converter={cv:SubtractionConverter}, ConverterParameter=380}"
-                MinWidth="360"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
+    <con:SplitterGrid
+        MinDetailWidth="{x:Static core:Config+Grid.MinPublisherDetailWidth}"
+        MaxDetailWidth="{x:Static core:Config+Grid.MaxPublisherDetailWidth}"
+        IsDetailExpanded="{Binding Config.PublisherDetailExpanded}"
+        DetailWidth="{Binding Config.PublisherDetailWidth}">
 
-        <StatusBar Margin="0,0,4,0">
-            <TextBlock Text="Filters"/>
-            <tk:IconButton 
-                Content="Active"
-                ToolTip="{x:Static r:Strings.ToolTipPublisherFilterActive}"
-                Icon="{StaticResource SquareSmallRedIconKey}" 
-                Command="{Binding Commands[ActiveFilter]}"/>
+        <con:SplitterGrid.HeaderLeft>
+            <StatusBar>
+                <TextBlock Text="Filters"/>
+                <tk:IconButton
+                    Content="Active"
+                    ToolTip="{x:Static r:Strings.ToolTipPublisherFilterActive}"
+                    Icon="{StaticResource SquareSmallRedIconKey}" 
+                    Command="{Binding Commands[ActiveFilter]}"/>
 
-            <tk:IconButton 
-                Content="Open"
-                ToolTip="{x:Static r:Strings.ToolTipPublisherFilterHaveSub}"
-                Icon="{StaticResource SquareSmallGrayIconKey}" 
-                Command="{Binding Commands[HaveSubFilter]}"/>
-            
-            <tk:IconButton 
-                Content="In Period"
-                ToolTip="{x:Static r:Strings.ToolTipPublisherFilterInPeriod}"
-                Icon="{StaticResource SquareSmallBlueIconKey}" 
-                Command="{Binding Commands[InPeriodFilter]}"/>
+                <tk:IconButton 
+                    Content="Open"
+                    ToolTip="{x:Static r:Strings.ToolTipPublisherFilterHaveSub}"
+                    Icon="{StaticResource SquareSmallGrayIconKey}" 
+                    Command="{Binding Commands[HaveSubFilter]}"/>
 
-            <tk:IconButton 
-                Content="Paying"
-                ToolTip="{x:Static r:Strings.ToolTipPublisherFilterPaying}"
-                Icon="{StaticResource SquareSmallGreenIconKey}" 
-                Command="{Binding Commands[PayingFilter]}"/>
+                <tk:IconButton 
+                    Content="In Period"
+                    ToolTip="{x:Static r:Strings.ToolTipPublisherFilterInPeriod}"
+                    Icon="{StaticResource SquareSmallBlueIconKey}" 
+                    Command="{Binding Commands[InPeriodFilter]}"/>
 
-            <Separator/>
+                <tk:IconButton 
+                    Content="Paying"
+                    ToolTip="{x:Static r:Strings.ToolTipPublisherFilterPaying}"
+                    Icon="{StaticResource SquareSmallGreenIconKey}" 
+                    Command="{Binding Commands[PayingFilter]}"/>
 
-            <tk:IconButton
-                x:Name="CustomFilterButton"
-                Content="{x:Static r:Strings.MenuItemCustom}"
-                ToolTip="{x:Static r:Strings.ToolTipFilterCustom}"
-                Icon="{StaticResource FilterIconKey}"
-                Command="{Binding ToggleCustomFilterCommand}"/>
+                <Separator/>
 
-            <tk:IconButton
-                Content="{x:Static r:Strings.MenuItemClear}"
-                ToolTip="{x:Static r:Strings.ToolTipFilterClear}"
-                Icon="{StaticResource FilterOffIconKey}"
-                Command="{Binding ClearFilterCommand}"/>
+                <tk:IconButton
+                    x:Name="CustomFilterButton"
+                    Content="{x:Static r:Strings.MenuItemCustom}"
+                    ToolTip="{x:Static r:Strings.ToolTipFilterCustom}"
+                    Icon="{StaticResource FilterIconKey}"
+                    Command="{Binding ToggleCustomFilterCommand}"/>
 
-            <Separator/>
+                <tk:IconButton
+                    Content="{x:Static r:Strings.MenuItemClear}"
+                    ToolTip="{x:Static r:Strings.ToolTipFilterClear}"
+                    Icon="{StaticResource FilterOffIconKey}"
+                    Command="{Binding ClearFilterCommand}"/>
 
-            <TextBlock>
-                <Run
-                    Foreground="{StaticResource DarkAlertForegroundBrush}" 
-                    Text="{Binding Filters.RecordCount, Mode=OneWay}"/>
-                <Run Text="records"/>
-            </TextBlock>
-            
-            <TextBlock 
-                tk:Property.IsVisible="{Binding Filters.IsAnyFilterActive}"
-                Foreground="{StaticResource DarkAlertForegroundBrush}"
-                Text="(row filter in effect)"/>
-        </StatusBar>
+                <Separator/>
 
-        <!-- Advanced filter -->
-        <Popup
-            Placement="Bottom"
-            PlacementTarget="{Binding ElementName=CustomFilterButton}"
-            VerticalOffset="6"
-            HorizontalOffset="6"
-            IsOpen="{Binding IsCustomFilterOpen}"
-            StaysOpen="True">
-            <Border 
-                Style="{StaticResource BorderEditContainerStyle}"
-                BorderThickness="2"
-                BorderBrush="{StaticResource DefaultBorderBrush}"
-                Background="{StaticResource DefaultBackgroundBrush}">
+                <TextBlock>
+                    <Run
+                        Foreground="{StaticResource DarkAlertForegroundBrush}" 
+                        Text="{Binding Filters.RecordCount, Mode=OneWay}"/>
+                    <Run Text="records"/>
+                </TextBlock>
 
-                <Grid 
-                    tk:Property.ColumnWidths="*,*"
-                    tk:Property.RowHeights="Auto,*"
-                    Style="{StaticResource DataEntryPanelStyle}">
+                <TextBlock
+                    tk:Property.IsVisible="{Binding Filters.IsAnyFilterActive}"
+                    Foreground="{StaticResource DarkAlertForegroundBrush}"
+                    Text="(row filter in effect)"/>
 
-                    <StackPanel Grid.ColumnSpan="2">
-                        <TextBlock Text="{x:Static r:Strings.TextName}"/>
-                        <TextBox
-                            Text="{Binding Filters.Text, 
-                            UpdateSourceTrigger=PropertyChanged,
-                            Delay=500}"/>
-                    </StackPanel>
+                <!-- Advanced filter -->
+                <Popup
+                    Placement="Bottom"
+                    PlacementTarget="{Binding ElementName=CustomFilterButton}"
+                    VerticalOffset="6"
+                    HorizontalOffset="6"
+                    IsOpen="{Binding IsCustomFilterOpen}"
+                    StaysOpen="True">
+                    <Border 
+                        Style="{StaticResource BorderEditContainerStyle}"
+                        BorderThickness="2"
+                        BorderBrush="{StaticResource DefaultBorderBrush}"
+                        Background="{StaticResource DefaultBackgroundBrush}">
 
-                    <StackPanel Grid.Row="1">
-                        <tk:ThreeWay Header="Active" State="{Binding Filters.ActiveState}"/>
-                        <tk:ThreeWay Header="Open Submission" State="{Binding Filters.OpenState}"/>
-                        <tk:ThreeWay Header="In Period" State="{Binding Filters.InPeriodState}"/>
-                    </StackPanel>
+                        <Grid 
+                            tk:Property.ColumnWidths="*,*"
+                            tk:Property.RowHeights="Auto,*"
+                            Style="{StaticResource DataEntryPanelStyle}">
 
-                    <StackPanel Grid.Row="1" Grid.Column="1">
-                        <tk:ThreeWay Header="Exclusive" State="{Binding Filters.ExclusiveState}"/>
-                        <tk:ThreeWay Header="Follow Up" State="{Binding Filters.FollowUpState}"/>
-                        <tk:ThreeWay Header="Paying" State="{Binding Filters.PayingState}"/>
-                        <tk:ThreeWay Header="Goner" State="{Binding Filters.GonerState}"/>
-                    </StackPanel>
+                            <StackPanel Grid.ColumnSpan="2">
+                                <TextBlock Text="{x:Static r:Strings.TextName}"/>
+                                <TextBox
+                                    Text="{Binding Filters.Text, 
+                                    UpdateSourceTrigger=PropertyChanged,
+                                    Delay=500}"/>
+                            </StackPanel>
 
-                </Grid>
-            </Border>
-        </Popup>
+                            <StackPanel Grid.Row="1">
+                                <tk:ThreeWay Header="Active" State="{Binding Filters.ActiveState}"/>
+                                <tk:ThreeWay Header="Open Submission" State="{Binding Filters.OpenState}"/>
+                                <tk:ThreeWay Header="In Period" State="{Binding Filters.InPeriodState}"/>
+                            </StackPanel>
 
-        <!-- Main data grid to display the tabular data  -->
-        <Border Grid.Row="1" Style="{StaticResource BorderEditContainerStyle}">
-            <tk:DataGrid 
+                            <StackPanel Grid.Row="1" Grid.Column="1">
+                                <tk:ThreeWay Header="Exclusive" State="{Binding Filters.ExclusiveState}"/>
+                                <tk:ThreeWay Header="Follow Up" State="{Binding Filters.FollowUpState}"/>
+                                <tk:ThreeWay Header="Paying" State="{Binding Filters.PayingState}"/>
+                                <tk:ThreeWay Header="Goner" State="{Binding Filters.GonerState}"/>
+                            </StackPanel>
+
+                        </Grid>
+                    </Border>
+                </Popup>
+            </StatusBar>
+        </con:SplitterGrid.HeaderLeft>
+
+        <con:SplitterGrid.HeaderRight>
+            <StatusBar>
+                <TextBlock
+                    Style="{StaticResource TitleDisplayTextBlockStyle}"
+                    Text="{Binding SelectedPublisher.Name}"/>
+            </StatusBar>
+        </con:SplitterGrid.HeaderRight>
+
+        <con:SplitterGrid.ContentLeft>
+            <tk:DataGrid
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}" 
                 SelectedItem="{Binding SelectedItem}"
@@ -144,30 +140,16 @@
                 <DataGrid.InputBindings>
                     <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenRowCommand}"/>
                 </DataGrid.InputBindings>
-                
+
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
-            </tk:DataGrid>
-        </Border>
-        
-        <!-- Splitter -->
-        <GridSplitter Grid.Row="1" Grid.Column="1" Style="{StaticResource VerticalGridSplitterStyle}" />
+            </tk:DataGrid>            
+        </con:SplitterGrid.ContentLeft>
 
-        <StatusBar Grid.Column="2" Margin="4,0,0,0">
-            <TextBlock 
-                Style="{StaticResource TitleDisplayTextBlockStyle}"
-                Text="{Binding SelectedPublisher.Name}"/>
-        </StatusBar>
+        <con:SplitterGrid.ContentRight>
+            <vw:PublisherEditContainer Visibility="{Binding EditVisibility}"/>
+        </con:SplitterGrid.ContentRight>
 
-        <!-- Editing zone -->
-        <Border
-            Grid.Row="1" Grid.Column="2"
-            Style="{StaticResource BorderEditContainerStyle}"
-            Visibility="{Binding EditVisibility}">
-
-            <vw:PublisherEditContainer/>
-
-        </Border>
-    </Grid>
+    </con:SplitterGrid>
 </UserControl>
