--- a/src/Panama/View/Main/TitleView.xaml
+++ b/src/Panama/View/Main/TitleView.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
-    xmlns:cv="clr-namespace:Restless.Panama.Core"
+    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
+    xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vw="clr-namespace:Restless.Panama.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,127 +12,121 @@
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="355">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <!-- 
-            MaxWidth binds to a value relative to the width of the grid. 
-            Converter parm is the desired min width of right column
-            -->
-            <ColumnDefinition 
-                Width="{Binding Config.LeftColumnTitle, Mode=TwoWay}"
-                MaxWidth="{Binding ActualWidth,
-                RelativeSource={RelativeSource AncestorType=Grid},
-                Converter={cv:SubtractionConverter}, ConverterParameter=372}"
-                MinWidth="480"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        
-        <StatusBar Margin="0,0,4,0">
-            <TextBlock Text="Filters"/>
-            <tk:IconButton 
-                Content="Ready"
-                ToolTip="{x:Static r:Strings.ToolTipTitleFilterReady}"
-                Icon="{StaticResource SquareSmallGreenIconKey}" 
-                Command="{Binding Commands[ReadyFilter]}"/>
-            
-            <tk:IconButton
-                Content="Flagged"
-                ToolTip="{x:Static r:Strings.ToolTipTitleFilterFlag}"
-                Icon="{StaticResource SquareSmallBlueIconKey}"
-                Command="{Binding Commands[FlaggedFilter]}"/>
-            
-            <tk:IconButton
-                Content="Submitted"
-                ToolTip="{x:Static r:Strings.ToolTipTitleFilterSubmitted}"
-                Icon="{StaticResource SquareSmallGrayIconKey}"
-                Command="{Binding Commands[SubmittedFilter]}"/>
-            
-            <tk:IconButton
-                Content="Published"
-                ToolTip="{x:Static r:Strings.ToolTipTitleFilterPublished}"
-                Icon="{StaticResource SquareSmallRedIconKey}"
-                Command="{Binding Commands[PublishedFilter]}"/>
+    <con:SplitterGrid
+        MinDetailWidth="{x:Static core:Config+Grid.MinTitleDetailWidth}"
+        MaxDetailWidth="{x:Static core:Config+Grid.MaxTitleDetailWidth}"
+        IsDetailExpanded="{Binding Config.TitleDetailExpanded}"
+        DetailWidth="{Binding Config.TitleDetailWidth}">
 
-            <Separator/>
-            
-            <tk:IconButton
-                x:Name="CustomFilterButton"
-                Content="{x:Static r:Strings.MenuItemCustom}"
-                ToolTip="{x:Static r:Strings.ToolTipFilterCustom}"
-                Icon="{StaticResource FilterIconKey}"
-                Command="{Binding ToggleCustomFilterCommand}"/>
-            
-            <tk:IconButton
-                Content="{x:Static r:Strings.MenuItemClear}"
-                ToolTip="{x:Static r:Strings.ToolTipFilterClear}"
-                Icon="{StaticResource FilterOffIconKey}"
-                Command="{Binding ClearFilterCommand}"/>
+        <con:SplitterGrid.HeaderLeft>
+            <StatusBar>
+                <TextBlock Text="Filters"/>
+                <tk:IconButton 
+                    Content="Ready"
+                    ToolTip="{x:Static r:Strings.ToolTipTitleFilterReady}"
+                    Icon="{StaticResource SquareSmallGreenIconKey}" 
+                    Command="{Binding Commands[ReadyFilter]}"/>
 
-            <Separator/>
+                <tk:IconButton
+                    Content="Flagged"
+                    ToolTip="{x:Static r:Strings.ToolTipTitleFilterFlag}"
+                    Icon="{StaticResource SquareSmallBlueIconKey}"
+                    Command="{Binding Commands[FlaggedFilter]}"/>
 
-            <TextBlock>
-                <Run
-                    Foreground="{StaticResource DarkAlertForegroundBrush}" 
-                    Text="{Binding Filters.RecordCount, Mode=OneWay}"/>
-                <Run Text="records"/>
-            </TextBlock>
-            
-            <TextBlock 
-                tk:Property.IsVisible="{Binding Filters.IsAnyFilterActive}"
-                Foreground="{StaticResource DarkAlertForegroundBrush}"
-                Text="(row filter in effect)"/>
-        </StatusBar>
+                <tk:IconButton
+                    Content="Submitted"
+                    ToolTip="{x:Static r:Strings.ToolTipTitleFilterSubmitted}"
+                    Icon="{StaticResource SquareSmallGrayIconKey}"
+                    Command="{Binding Commands[SubmittedFilter]}"/>
 
-        <!-- Advanced filter -->
-        <Popup
-            Placement="Bottom"
-            PlacementTarget="{Binding ElementName=CustomFilterButton}"
-            VerticalOffset="6"
-            HorizontalOffset="6"
-            IsOpen="{Binding IsCustomFilterOpen}"
-            StaysOpen="True">
-            <Border 
-                Style="{StaticResource BorderEditContainerStyle}"
-                BorderThickness="2"
-                BorderBrush="{StaticResource DefaultBorderBrush}"
-                Background="{StaticResource DefaultBackgroundBrush}">
-                
-                <Grid 
-                    tk:Property.ColumnWidths="*,*"
-                    tk:Property.RowHeights="Auto,*"
-                    Style="{StaticResource DataEntryPanelStyle}">
+                <tk:IconButton
+                    Content="Published"
+                    ToolTip="{x:Static r:Strings.ToolTipTitleFilterPublished}"
+                    Icon="{StaticResource SquareSmallRedIconKey}"
+                    Command="{Binding Commands[PublishedFilter]}"/>
 
-                    <StackPanel Grid.ColumnSpan="2">
-                        <TextBlock Text="{x:Static r:Strings.TextTitle}"/>
-                        <TextBox
-                            Text="{Binding Filters.Text, 
-                            UpdateSourceTrigger=PropertyChanged,
-                            Delay=500}"/>
-                    </StackPanel>
+                <Separator/>
 
-                    <StackPanel Grid.Row="1">
-                        <tk:ThreeWay Header="{x:Static r:Strings.TextReady}" State="{Binding Filters.ReadyState}"/>
-                        <tk:ThreeWay Header="{x:Static r:Strings.TextFlagged}" State="{Binding Filters.FlaggedState}"/>
-                        <tk:ThreeWay Header="{x:Static r:Strings.TextPublished}" State="{Binding Filters.PublishedState}"/>
-                    </StackPanel>
+                <tk:IconButton
+                    x:Name="CustomFilterButton"
+                    Content="{x:Static r:Strings.MenuItemCustom}"
+                    ToolTip="{x:Static r:Strings.ToolTipFilterCustom}"
+                    Icon="{StaticResource FilterIconKey}"
+                    Command="{Binding ToggleCustomFilterCommand}"/>
 
-                    <StackPanel Grid.Row="1" Grid.Column="1">
-                        <tk:ThreeWay Header="{x:Static r:Strings.TextSubmitted}" State="{Binding Filters.CurrentlySubmittedState}"/>
-                        <tk:ThreeWay Header="{x:Static r:Strings.TextEverSubmitted}" State="{Binding Filters.EverSubmittedState}"/>
-                        <tk:ThreeWay Header="{x:Static r:Strings.TextSelfPublished}" State="{Binding Filters.SelfPublishedState}"/>
-                    </StackPanel>
+                <tk:IconButton
+                    Content="{x:Static r:Strings.MenuItemClear}"
+                    ToolTip="{x:Static r:Strings.ToolTipFilterClear}"
+                    Icon="{StaticResource FilterOffIconKey}"
+                    Command="{Binding ClearFilterCommand}"/>
 
-                </Grid>
-            </Border>
-        </Popup>
+                <Separator/>
 
-        <!-- Main data grid -->
-        <Border Grid.Row="1" Style="{StaticResource BorderEditContainerStyle}">
+                <TextBlock>
+                    <Run
+                        Foreground="{StaticResource DarkAlertForegroundBrush}" 
+                        Text="{Binding Filters.RecordCount, Mode=OneWay}"/>
+                    <Run Text="records"/>
+                </TextBlock>
+
+                <TextBlock 
+                    tk:Property.IsVisible="{Binding Filters.IsAnyFilterActive}"
+                    Foreground="{StaticResource DarkAlertForegroundBrush}"
+                    Text="(row filter in effect)"/>
+                <!-- Advanced filter -->
+                <Popup
+                    Placement="Bottom"
+                    PlacementTarget="{Binding ElementName=CustomFilterButton}"
+                    VerticalOffset="6"
+                    HorizontalOffset="6"
+                    IsOpen="{Binding IsCustomFilterOpen}"
+                    StaysOpen="True">
+                    <Border 
+                        Style="{StaticResource BorderEditContainerStyle}"
+                        BorderThickness="2"
+                        BorderBrush="{StaticResource DefaultBorderBrush}"
+                        Background="{StaticResource DefaultBackgroundBrush}">
+
+                        <Grid 
+                            tk:Property.ColumnWidths="*,*"
+                            tk:Property.RowHeights="Auto,*"
+                            Style="{StaticResource DataEntryPanelStyle}">
+
+                            <StackPanel Grid.ColumnSpan="2">
+                                <TextBlock Text="{x:Static r:Strings.TextTitle}"/>
+                                <TextBox
+                                    Text="{Binding Filters.Text, 
+                                    UpdateSourceTrigger=PropertyChanged,
+                                    Delay=500}"/>
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="1">
+                                <tk:ThreeWay Header="{x:Static r:Strings.TextReady}" State="{Binding Filters.ReadyState}"/>
+                                <tk:ThreeWay Header="{x:Static r:Strings.TextFlagged}" State="{Binding Filters.FlaggedState}"/>
+                                <tk:ThreeWay Header="{x:Static r:Strings.TextPublished}" State="{Binding Filters.PublishedState}"/>
+                            </StackPanel>
+
+                            <StackPanel Grid.Row="1" Grid.Column="1">
+                                <tk:ThreeWay Header="{x:Static r:Strings.TextSubmitted}" State="{Binding Filters.CurrentlySubmittedState}"/>
+                                <tk:ThreeWay Header="{x:Static r:Strings.TextEverSubmitted}" State="{Binding Filters.EverSubmittedState}"/>
+                                <tk:ThreeWay Header="{x:Static r:Strings.TextSelfPublished}" State="{Binding Filters.SelfPublishedState}"/>
+                            </StackPanel>
+
+                        </Grid>
+                    </Border>
+                </Popup>
+            </StatusBar>
+        </con:SplitterGrid.HeaderLeft>
+
+        <con:SplitterGrid.HeaderRight>
+            <StatusBar>
+                <TextBlock 
+                    Style="{StaticResource TitleDisplayTextBlockStyle}"
+                    Text="{Binding SelectedTitle.Title}"/>
+            </StatusBar>
+        </con:SplitterGrid.HeaderRight>
+
+        <con:SplitterGrid.ContentLeft>
             <tk:DataGrid 
                 RowHeight="{Binding Config.DataGridRowHeight}"
                 ItemsSource="{Binding ListView}"
@@ -139,34 +134,20 @@
                 RestoreStateBehavior="RestoreLastSelection"
                 tk:DataGridColumns.Columns="{Binding Columns}"
                 RowStyle="{StaticResource TitleDataGridRowStyle}">
-                
+
                 <DataGrid.InputBindings>
                     <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenRowCommand}"/>
-                </DataGrid.InputBindings>              
-                
+                </DataGrid.InputBindings>
+
                 <DataGrid.ContextMenu>
                     <ContextMenu ItemsSource="{Binding MenuItems}"/>
                 </DataGrid.ContextMenu>
-            </tk:DataGrid>
-        </Border>
+            </tk:DataGrid>            
+        </con:SplitterGrid.ContentLeft>
 
-        <!-- Splitter -->
-        <GridSplitter Grid.Row="1" Grid.Column="1" Style="{StaticResource VerticalGridSplitterStyle}" />
+        <con:SplitterGrid.ContentRight>
+            <vw:TitleEditContainer Visibility="{Binding EditVisibility}"/>
+        </con:SplitterGrid.ContentRight>
 
-        <StatusBar Grid.Column="2" Margin="4,0,0,0">
-            <TextBlock 
-                Style="{StaticResource TitleDisplayTextBlockStyle}"
-                Text="{Binding SelectedTitle.Title}"/>
-        </StatusBar>
-        
-        <!-- Editing zone -->
-        <Border
-            Grid.Row="1" Grid.Column="2"
-            Style="{StaticResource BorderEditContainerStyle}"
-            Visibility="{Binding EditVisibility}">
-            
-            <vw:TitleEditContainer/>
-            
-        </Border>
-    </Grid>
+    </con:SplitterGrid>
 </UserControl>
