--- a/src/Panama/View/Main/AuthorView.xaml
+++ b/src/Panama/View/Main/AuthorView.xaml
@@ -3,20 +3,36 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:con="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
+    xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:AuthorViewModel}"
     mc:Ignorable="d"
-    d:DesignWidth="860" d:DesignHeight="500">
-    <Grid tk:Property.ColumnWidths="*,*" tk:Property.RowHeights="Auto,*">
+    d:DesignWidth="360" d:DesignHeight="200">
+    <con:SplitterGrid
+        MinDetailWidth="{x:Static core:Config+Grid.MinAuthorDetailWidth}"
+        MaxDetailWidth="{x:Static core:Config+Grid.MaxAuthorDetailWidth}"
+        IsDetailExpanded="{Binding Config.AuthorDetailExpanded}"
+        DetailWidth="{Binding Config.AuthorDetailWidth}">
 
-        <StatusBar Margin="0,0,4,0">
-            <TextBlock Text="{x:Static r:Strings.MenuItemAuthors}"/>
-            <!-- no filters for now -->
-        </StatusBar>
+        <con:SplitterGrid.HeaderLeft>
+            <StatusBar>
+                <TextBlock Text="{x:Static r:Strings.MenuItemAuthors}"/>
+                <!-- no filters for now -->
+            </StatusBar>           
+        </con:SplitterGrid.HeaderLeft>
 
-        <Border Grid.Row="1" Style="{StaticResource BorderEditContainerStyle}">
+        <con:SplitterGrid.HeaderRight>
+            <StatusBar>
+                <TextBlock
+                    Style="{StaticResource TitleDisplayTextBlockStyle}"
+                    Text="{Binding SelectedAuthor.Name}"/>
+            </StatusBar>
+        </con:SplitterGrid.HeaderRight>
+
+        <con:SplitterGrid.ContentLeft>
             <DataGrid
                 ItemsSource="{Binding ListView}"
                 SelectedItem="{Binding SelectedItem}"
@@ -27,26 +43,19 @@
                 </DataGrid.ContextMenu>
 
             </DataGrid>
-        </Border>
+        </con:SplitterGrid.ContentLeft>
 
-        <StatusBar Grid.Column="2" Margin="4,0,0,0">
-            <TextBlock 
-                Style="{StaticResource TitleDisplayTextBlockStyle}"
-                Text="{Binding SelectedAuthor.Name}"/>
-        </StatusBar>
-
-        <Border
-            Grid.Row="1"
-            Grid.Column="1"
-            Style="{StaticResource BorderEditContainerStyle}"
-            Visibility="{Binding EditVisibility}">
-
-            <StackPanel Style="{StaticResource DataEntryPanelStyle}">
+        <con:SplitterGrid.ContentRight>
+            <StackPanel 
+                Style="{StaticResource DataEntryPanelStyle}"
+                Visibility="{Binding EditVisibility}">
+                
                 <TextBlock Text="{x:Static r:Strings.TextName}"/>
                 <TextBox Text="{Binding SelectedAuthor.Name}"/>
                 <CheckBox IsChecked="{Binding SelectedAuthor.IsDefault}" Content="Default author"/>
-            </StackPanel>
-            
-        </Border>
-    </Grid>
+                
+            </StackPanel>            
+        </con:SplitterGrid.ContentRight>
+
+    </con:SplitterGrid>
 </UserControl>
